Removed footer & Allow scrollbars by removing position:fixed on body

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,7 +26,6 @@ body {
   z-index:    10;
   top:        0;
   left:       0;
-  position:   fixed;
 }
 
 .navbar-fixed-top {
